@@ -22,6 +22,7 @@
     "PDF::Action::Named" : "lib/PDF/Action/Named.pm",
     "PDF::Action::URI" : "lib/PDF/Action/URI.pm",
     "PDF::Annot" : "lib/PDF/Annot.pm",
+    "PDF::Annot::Caret" : "lib/PDF/Annot/Caret.pm",
     "PDF::Annot::Circle" : "lib/PDF/Annot/Circle.pm",
     "PDF::Annot::FileAttachment" : "lib/PDF/Annot/FileAttachment.pm",
     "PDF::Annot::Link" : "lib/PDF/Annot/Link.pm",
@@ -72,6 +73,7 @@
     "PDF::Function::Stitching" : "lib/PDF/Function/Stitching.pm",
     "PDF::Group" : "lib/PDF/Group.pm",
     "PDF::Group::Transparency" : "lib/PDF/Group/Transparency.pm",
+    "PDF::ICCProfile" : "lib/PDF/ICCProfile.pm",
     "PDF::Image" : "lib/PDF/Image.pm",
     "PDF::Info" : "lib/PDF/Info.pm",
     "PDF::MCR" : "lib/PDF/MCR.pm",
